--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.10.2",
+    "@chakra-ui/react": "^2.2.6",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -29,7 +30,9 @@
     "react": "18.2.0",
     "react-confirm-box": "^1.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
+    "react-table": "^7.8.0",
     "web3modal": "^1.9.8"
   },
   "devDependencies": {
